--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-requests
-notion-client
-github-heatmap
-retrying
-pendulum
-python-dotenv
-feedparser
-beautifulsoup4
+requests==2.32.5
+notion-client==2.5.0
+github-heatmap==1.3.8
+retrying==1.4.2
+pendulum==3.1.0
+python-dotenv==1.2.1
+feedparser==6.0.12
+beautifulsoup4==4.12.2
